# SignumFlux

./: .gitignore  CMakeLists.txt
include/core/: sigflx_module.h  sigflx_signal.h  sigflx_stream.h
include/io/: sigflx_io_codec_template.h  sigflx_io_codec_wav.h  sigflx_io_file_format.h  sigflx_io_file_stream_template.h  sigflx_io_file_stream_wav.h  sigflx_io_header_wav.h
include/module/: sigflx_modules_oscillator.h  sigflx_modules_parameter.h
include/scripting/: sigflx_script_ast_manager.h  sigflx_script_ast_node.h  sigflx_script_ast_pool.h  sigflx_script_ast_visitor.h  sigflx_script_lexer.h  sigflx_script_parser.h
include/sigflx_lib/: sigflx_allocators_fixed_pool.h  sigflx_container_map.h  sigflx_container_vector.h  sigflx_container_vector_view.h  sigflx_digital_generate.h  sigflx_digital_process.h  sigflx_math_hasher.h  sigflx_platform_file.h  sigflx_signal_generate.h  sigflx_signal_process.h  sigflx_strings_c_methods.h  sigflx_strings_check.h  sigflx_util_log.h
src/core/: sigflx_signal.tpp
src/io/: sigflx_io_codec_wav.tpp  sigflx_io_file_stream_wav.tpp  sigflx_io_header_wav.tpp
src/module/: sigflx_modules_oscillator.tpp  sigflx_modules_parameter.tpp
src/scripting/: sigflx_script_ast_node.tpp  sigflx_script_ast_visitor.tpp  sigflx_script_lexer.tpp
src/sigflx_lib/: sigflx_allocators_fixed_pool.tpp  sigflx_container_map.tpp  sigflx_container_vector.tpp  sigflx_container_vector_view.tpp  sigflx_digital_generate.tpp  sigflx_digital_process.tpp  sigflx_math_hasher.tpp  sigflx_signal_generate.tpp  sigflx_signal_process.tpp  sigflx_strings_c_methods.tpp  sigflx_strings_check.tpp  sigflx_util_log.tpp
test/: CMakeLists.txt  sigflx_container_map_test.cpp  sigflx_math_hasher_test.cpp  sigflx_modules_oscillator_test.cpp  sigflx_modules_parameter_test.cpp  sigflx_platform_file_test.cpp  sigflx_script_lexer_test.cpp  sigflx_sfml_test.cpp  sigflx_signal_test.cpp  sigflx_strings_c_methods_test.cpp  sigflx_strings_check_test.cpp  sigflx_util_log_test.cpp
